--- a/templates/management/admin_tenant_profile.html
+++ b/templates/management/admin_tenant_profile.html
@@ -71,9 +71,7 @@
 <section style="background: linear-gradient(#ffffff 0%, rgb(184,237,233) 52%, #54fff5 100%);margin-top: 150px;">
     <div class="container">
         <div class="row">
-            <div class="col-md-4"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-fill" style="font-size: 116px;height: 138px;width: 119px;display: block;margin: auto;">
-                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
-                </svg>
+            <div class="col-md-4">
                 <form method="post" name="user_profile">
                     {% csrf_token %}
                     <input type="hidden" name="user_profile" value="1">
@@ -94,67 +92,49 @@
                 </form>
             </div>
             <div class="col-md-4">
-                <h3 style="font-family: 'Bebas Neue', serif;">Tenant current reservations</h3>
-                <div class="row">
-                    <div class="col-md-6 offset-md-3">
-                        <div id="faqlist" class="accordion accordion-flush">
-                            {% for reservation in user_reservations %}
-                            {% if reservation.date == todays_date or reservation.date == tomorrows_date %}
-                            <div class="accordion-item">
-                                <h2 class="accordion-header"><button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-{{ forloop.counter }}" style="font-family: 'Bebas Neue'">{{ reservation.amenity }} | #{{ reservation.id }} |
-                                {% if reservation.active %}
-                                    <span class="active">Active</span>
-                                {% else %}
-                                    <span class="inactive">Inactive</span>
-                                {% endif %}</button></h2>
-                                <div id="content-accordion-{{ forloop.counter }}" class="accordion-collapse collapse" data-bs-parent="#faqlist">
-                                    <p class="accordion-body">{{ reservation.date }}</p>
-                                    <p class="accordion-body">
-                                        {% for hour in reservation.hours_booked.all %}
-                                            {{ hour }},
-                                        {% endfor %}
-                                    </p>
-                                    <a href="{% url 'admin_reservation_delete' reservation.id %}" class="btn btn-danger delete-btn">Delete</a>
-                                    <button class="btn btn-danger toggle-active" data-reservation-id="{{ reservation.id }}" data-url="{% url 'toggle_reservation_active' reservation.id %}">
-                                        {% if user.active %}
-                                            Deactivate
-                                        {% else %}
-                                            Activate
-                                        {% endif %}
-                                    </button>
-                                </div>
-                            </div>
-                            {% endif %}
-                            {% endfor %}
+                <form method="post" name="user_comments">
+                    {% csrf_token %}
+                    <input type="hidden" name="user_comments" value="1">
+                    <div class="form">
+                        <h3 style="font-family: 'Bebas Neue', serif;">Add New Comment</h3>
+                        <div class="input-container ic1">
+                            <textarea id="{{ comment_form.text.id }}" class="input" name="{{ comment_form.text.name }}" rows="4" placeholder="Your Comment"></textarea>
+                            <button class="btn btn-outline-primary btn-sm" style="margin-top:10px;" type="submit">Save comment</button>
                         </div>
+            
                     </div>
-                </div>
+                </form>            
             </div>
             <div class="col-md-4">
-                <h3 style="font-family: 'Bebas Neue', serif;">Past reservations:</h3>
+                <h3 style="font-family: 'Bebas Neue', serif;">Account comments</h3>
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
+                        {% with comments.count as total_comments %}
+                        <h6>
+                            {{ total_comments }} comment{{ total_comments|pluralize:"s" }}
+                        </h6>
+                    {% endwith %}
                         <div id="faqlist" class="accordion accordion-flush">
-                            {% for reservation in user_reservations|slice:":10" %}
-                            {% if reservation.date != todays_date and reservation.date != tomorrows_date %}
+                            {% for comment in comments %}
                             <div class="accordion-item">
-                                <h2 class="accordion-header"><button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-past-{{ forloop.counter }}" style="font-family: 'Bebas Neue'">{{ reservation.amenity }} | #{{ reservation.id }} | 
-                                {% if reservation.active %}
-                                    Active
-                                {% else %}
-                                    Inactive
-                                {% endif %}
-                                </button></h2>
-                                <div id="content-accordion-past-{{ forloop.counter }}" class="accordion-collapse collapse" data-bs-parent="#faqlist">
-                                    <p class="accordion-body">{{ reservation.date }}</p>
+                                <h2 class="accordion-header">
+                                    <button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#comment-accordion-{{ comment.id }}" style="font-family: 'Bebas Neue'">
+                                        {{ comment.created|date:"SHORT_DATE_FORMAT" }} | 
+                                        {{ comment.text|slice:":10" }}
+                                    </button>
+                                </h2>
+                                <div id="comment-accordion-{{ comment.id }}" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                                     <p class="accordion-body">
-                                    {% for hour in reservation.hours_booked.all %}
-                                        {{ hour }},
-                                    {% endfor %}
+                                        {{ comment.text|linebreaks }}
                                     </p>
+                                    <form method="post" action="{% url 'delete_comment' user_id=user.id comment_id=comment.id %}">
+                                        {% csrf_token %}
+                                        <button class="btn btn-danger toggle-active" type="submit">Delete Comment</button>
+                                    </form>
                                 </div>
                             </div>
-                            {% endif %}
+                            {% empty %}
+                                <p>There are no comments yet.</p>
                             {% endfor %}
                         </div>
                     </div>
@@ -200,52 +180,71 @@
                 </div>
             </div>
             <div class="col-md-4" style="margin-top: 50px;">
-                <h3 style="font-family: 'Bebas Neue', serif;">Account comments</h3>
+                <h3 style="font-family: 'Bebas Neue', serif;">Tenant current reservations</h3>
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
-                        {% with comments.count as total_comments %}
-                        <h6>
-                            {{ total_comments }} comment{{ total_comments|pluralize:"s" }}
-                        </h6>
-                    {% endwith %}
                         <div id="faqlist" class="accordion accordion-flush">
-                            {% for comment in comments %}
+                            {% for reservation in user_reservations %}
+                            {% if reservation.date == todays_date or reservation.date == tomorrows_date %}
                             <div class="accordion-item">
-                                <h2 class="accordion-header">
-                                    <button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#comment-accordion-{{ comment.id }}" style="font-family: 'Bebas Neue'">
-                                        {{ comment.created|date:"SHORT_DATE_FORMAT" }} | 
-                                        {{ comment.text|slice:":10" }}
-                                    </button>
-                                </h2>
-                                <div id="comment-accordion-{{ comment.id }}" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                                <h2 class="accordion-header"><button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-{{ forloop.counter }}" style="font-family: 'Bebas Neue'">{{ reservation.amenity }} | #{{ reservation.id }} |
+                                {% if reservation.active %}
+                                    <span class="active">Active</span>
+                                {% else %}
+                                    <span class="inactive">Inactive</span>
+                                {% endif %}</button></h2>
+                                <div id="content-accordion-{{ forloop.counter }}" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                                    <p class="accordion-body">{{ reservation.date }}</p>
                                     <p class="accordion-body">
-                                        {{ comment.text|linebreaks }}
+                                        {% for hour in reservation.hours_booked.all %}
+                                            {{ hour }},
+                                        {% endfor %}
                                     </p>
-                                    <form method="post" action="{% url 'delete_comment' user_id=user.id comment_id=comment.id %}">
-                                        {% csrf_token %}
-                                        <button class="btn btn-danger toggle-active" type="submit">Delete Comment</button>
-                                    </form>
+                                    <a href="{% url 'admin_reservation_delete' reservation.id %}" class="btn btn-danger delete-btn">Delete</a>
+                                    <button class="btn btn-danger toggle-active" data-reservation-id="{{ reservation.id }}" data-url="{% url 'toggle_reservation_active' reservation.id %}">
+                                        {% if user.active %}
+                                            Deactivate
+                                        {% else %}
+                                            Activate
+                                        {% endif %}
+                                    </button>
                                 </div>
                             </div>
-                            {% empty %}
-                                <p>There are no comments yet.</p>
+                            {% endif %}
                             {% endfor %}
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <form method="post" name="user_comments">
-                    {% csrf_token %}
-                    <input type="hidden" name="user_comments" value="1">
-                    <div class="form">
-                        <h3 style="font-family: 'Bebas Neue', serif;">Add New Comment</h3>
-                        <div class="input-container ic1">
-                            <textarea id="{{ comment_form.text.id }}" class="input" name="{{ comment_form.text.name }}" rows="4" placeholder="Your Comment"></textarea>
+            <div class="col-md-4" style="margin-top: 50px;">
+                <h3 style="font-family: 'Bebas Neue', serif;">Past reservations:</h3>
+                <div class="row">
+                    <div class="col-md-6 offset-md-3">
+                        <div id="faqlist" class="accordion accordion-flush">
+                            {% for reservation in user_reservations|slice:":10" %}
+                            {% if reservation.date != todays_date and reservation.date != tomorrows_date %}
+                            <div class="accordion-item">
+                                <h2 class="accordion-header"><button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-past-{{ forloop.counter }}" style="font-family: 'Bebas Neue'">{{ reservation.amenity }} | #{{ reservation.id }} | 
+                                {% if reservation.active %}
+                                    Active
+                                {% else %}
+                                    Inactive
+                                {% endif %}
+                                </button></h2>
+                                <div id="content-accordion-past-{{ forloop.counter }}" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                                    <p class="accordion-body">{{ reservation.date }}</p>
+                                    <p class="accordion-body">
+                                    {% for hour in reservation.hours_booked.all %}
+                                        {{ hour }},
+                                    {% endfor %}
+                                    </p>
+                                </div>
+                            </div>
+                            {% endif %}
+                            {% endfor %}
                         </div>
-                        <button class="btn btn-outline-primary btn-sm" style="margin-top:10px;" type="submit">Save comment</button>
                     </div>
-                </form>            
+                </div>
             </div>
         </div>
     </div>
