--- a/templates/management/admin_dashboard.html
+++ b/templates/management/admin_dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'admin_base.html' %}
 {% load static %}
 
-{% block title %}My profile - {{ user.first_name }}{% endblock title %}
+{% block title %}Admin Dashboard - {{ user.first_name }}{% endblock title %}
 
 {% block content %}
 <style>
@@ -25,7 +25,7 @@
                 <h5><a href="{% url 'profile_edit' %}">Edit your profile</a>.</h5> 
                 <h5><a href="{% url "password_change" %}">Change your password</a>.</h5>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4">             
                 <h3 style="font-family: 'Bebas Neue', serif;">Available Amenities</h3>
                 <h5 style="font-family: 'Bebas Neue', serif;">Change the availability of a particular amenity</h5>
                 <div class="row">
@@ -51,17 +51,46 @@
                                             This amenity is currently inactive.
                                         {% endif %}                                        
                                     </p>
-                                    {% if amenity.available %}
                                     <form method="POST" action="{% url 'admin_amenity_active' amenity_id=amenity.id %}">
                                         {% csrf_token %}
-                                        <button class="btn btn-danger deactivate-btn" data-url="{% url 'admin_amenity_active' amenity_id=amenity.id %}" type="submit">Deactivate</button>
+                                        <button class="btn btn-danger deactivate-btn" data-url="{% url 'admin_amenity_active' amenity_id=amenity.id %}" type="submit" value="{% if amenity.available %}Deactivate{% else %}Activate{% endif %}">
+                                            {% if amenity.available %}Deactivate{% else %}Activate{% endif %}
+                                        </button>
                                     </form>
-                                    {% else %}
-                                    <form method="POST" action="{% url 'admin_amenity_active' amenity_id=amenity.id %}">
-                                        {% csrf_token %}
-                                        <button class="btn btn-danger" data-url="{% url 'admin_amenity_active' amenity_id=amenity.id %}" type="submit">Activate</button>
-                                    </form>
-                                    {% endif %}
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">             
+                <h3 style="font-family: 'Bebas Neue', serif;">Latest reservations</h3>
+                <div class="row">
+                    <div class="col-md-6 offset-md-3">
+                        <div id="faqlist" class="accordion accordion-flush">
+                            {% for reservation in latest_reservations %}
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-{{ reservation.id }}" style="font-family: 'Bebas Neue'">
+                                        {{ reservation.amenity }} | 
+                                        {{ reservation.user.first_name }}
+                                        {{ reservation.user.last_name }}
+                                    </button>
+                                </h2>
+                                <div id="content-accordion-{{ reservation.id }}" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                                    <p class="accordion-body">
+                                        Date: {{ reservation.date|date:"d/m/Y" }}<br>
+                                        Status:{% if reservation.active %}
+                                            Active<br>
+                                        {% else %}
+                                            Inactive<br>
+                                        {% endif %}
+                                        Hours booked:<br>
+                                        {% for hour in reservation.hours_booked.all %}
+                                            {{ hour }}<br>
+                                        {% endfor %}
+                                    </p>
                                 </div>
                             </div>
                             {% endfor %}
@@ -75,45 +104,51 @@
 {% endblock content %}
 {% block extra_js %}
 <script>
-document.querySelectorAll('.deactivate-btn').forEach(btn => {
-    btn.addEventListener('click', function (e) {
-        e.preventDefault();
-        const href = this.getAttribute('data-url');
-        swal({
-            title: "Are you sure?",
-            text: "Are you going to completely disable this amenity in the building. No reservations will be possible.",
-            icon: "warning",
-            buttons: true,
-            dangerMode: true,
-        })
-        .then((willDeactivate) => {
-            if (willDeactivate) {
-                swal({
-                    title: "Enter Admin Password",
-                    text: "Please enter the admin password to confirm:",
-                    content: "input",
-                    icon: "info",
-                    buttons: true,
-                    dangerMode: true,
-                })
-                .then((adminPassword) => {
-                    if (adminPassword) {
-                        fetch(href, {
-                            method: 'POST',
-                            headers: {
-                                'X-CSRFToken': '{{ csrf_token }}',
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify({ adminPassword }),
-                        })
-                        .then(res => window.location.reload())
-                        .catch(err => console.log(err));
-                    }
-                });
+    {% comment %} console.log({{ user.is_superuser|lower }}); {% endcomment %}
+    
+    document.querySelectorAll('.deactivate-btn').forEach(btn => {
+        btn.addEventListener('click', function (e) {
+            e.preventDefault();
+            const href = this.getAttribute('data-url');
+            const isSuperAdmin = {{ user.is_superuser|lower }};
+            const action = this.value.toLowerCase(); // Pobierz wartość atrybutu value
+            
+            if (!isSuperAdmin) {
+                swal("Permission Denied", "You don't have permission to perform this action.", "error");
+                return;
             }
+
+            const confirmationText = `You are going to completely ${action} this amenity in the building.\nNo reservations will be possible!\nAre you sure you want to ${action} this amenity?`;
+            
+            swal({
+                title: "Confirmation",
+                text: confirmationText,
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+            .then((willDeactivate) => {
+                if (willDeactivate) {
+                    fetch(href, {
+                        method: 'POST',
+                        headers: {
+                            'X-CSRFToken': '{{ csrf_token }}'
+                        },
+                    })
+                    .then(res => {
+                        if (res.ok) {
+                            window.location.reload();
+                        } else {
+                            swal("Error", "An error occurred while processing your request.", "error");
+                        }
+                    })
+                    .catch(err => console.log(err));
+                }
+            });
         });
     });
-});
-
-</script>
+</script>    
+   
 {% endblock extra_js %}
+
+
