--- a/templates/management/admin_dashboard.html
+++ b/templates/management/admin_dashboard.html
@@ -26,6 +26,78 @@
                 <h5><a href="{% url "password_change" %}">Change your password</a>.</h5>
             </div>
             <div class="col-md-4">             
+                <h3 style="font-family: 'Bebas Neue', serif;">Incoming reservations</h3>
+                <div class="row">
+                    <div class="col-md-6 offset-md-3">
+                        <div id="faqlist-incoming" class="accordion accordion-flush">
+                            {% for inc_reservation in incoming_reservations %}
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-incoming-{{ inc_reservation.id }}" data-bs-parent="#faqlist-incoming" style="font-family: 'Bebas Neue'">
+                                        {{ inc_reservation.amenity }} | 
+                                        {{ inc_reservation.user.first_name }}
+                                        {{ inc_reservation.user.last_name }}
+                                    </button>
+                                </h2>
+                                <div id="content-accordion-incoming-{{ inc_reservation.id }}" class="accordion-collapse collapse">
+                                    <p class="accordion-body">
+                                        Date: {{ inc_reservation.date|date:"d/m/Y" }}<br>
+                                        ID: {{ inc_reservation.id }}<br>
+                                        Status:{% if inc_reservation.active %}
+                                            Active<br>
+                                        {% else %}
+                                            Inactive<br>
+                                        {% endif %}
+                                        Hours booked:<br>
+                                        {% for hour in inc_reservation.hours_booked.all %}
+                                            {{ hour }}<br>
+                                        {% endfor %}
+                                        <a href="{% url 'admin_tenant_profile' name=inc_reservation.user.first_name surname=inc_reservation.user.last_name user_id=inc_reservation.user.id %}">Manage reservation</a>
+                                    </p>
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">             
+                <h3 style="font-family: 'Bebas Neue', serif;">Latest reservations</h3>
+                <div class="row">
+                    <div class="col-md-6 offset-md-3">
+                        <div id="faqlist-latest" class="accordion accordion-flush">
+                            {% for reservation in latest_reservations %}
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-latest-{{ reservation.id }}" data-bs-parent="#faqlist-latest" style="font-family: 'Bebas Neue'">
+                                        {{ reservation.amenity }} | 
+                                        {{ reservation.user.first_name }}
+                                        {{ reservation.user.last_name }}
+                                    </button>
+                                </h2>
+                                <div id="content-accordion-latest-{{ reservation.id }}" class="accordion-collapse collapse">
+                                    <p class="accordion-body">
+                                        Date: {{ reservation.date|date:"d/m/Y" }}<br>
+                                        ID: {{ reservation.id }}<br>
+                                        Status:{% if reservation.active %}
+                                            Active<br>
+                                        {% else %}
+                                            Inactive<br>
+                                        {% endif %}
+                                        Hours booked:<br>
+                                        {% for hour in reservation.hours_booked.all %}
+                                            {{ hour }}<br>
+                                        {% endfor %}
+                                        <a href="{% url 'admin_tenant_profile' name=reservation.user.first_name surname=reservation.user.last_name user_id=reservation.user.id %}">Manage reservation</a>
+                                    </p>
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>            
+            <div class="col-md-4">             
                 <h3 style="font-family: 'Bebas Neue', serif;">Available Amenities</h3>
                 <h5 style="font-family: 'Bebas Neue', serif;">Change the availability of a particular amenity</h5>
                 <div class="row">
@@ -64,54 +136,18 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">             
-                <h3 style="font-family: 'Bebas Neue', serif;">Latest reservations</h3>
-                <div class="row">
-                    <div class="col-md-6 offset-md-3">
-                        <div id="faqlist" class="accordion accordion-flush">
-                            {% for reservation in latest_reservations %}
-                            <div class="accordion-item">
-                                <h2 class="accordion-header">
-                                    <button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-{{ reservation.id }}" style="font-family: 'Bebas Neue'">
-                                        {{ reservation.amenity }} | 
-                                        {{ reservation.user.first_name }}
-                                        {{ reservation.user.last_name }}
-                                    </button>
-                                </h2>
-                                <div id="content-accordion-{{ reservation.id }}" class="accordion-collapse collapse" data-bs-parent="#faqlist">
-                                    <p class="accordion-body">
-                                        Date: {{ reservation.date|date:"d/m/Y" }}<br>
-                                        Status:{% if reservation.active %}
-                                            Active<br>
-                                        {% else %}
-                                            Inactive<br>
-                                        {% endif %}
-                                        Hours booked:<br>
-                                        {% for hour in reservation.hours_booked.all %}
-                                            {{ hour }}<br>
-                                        {% endfor %}
-                                    </p>
-                                </div>
-                            </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </section>
 {% endblock content %}
 {% block extra_js %}
 <script>
-    {% comment %} console.log({{ user.is_superuser|lower }}); {% endcomment %}
-    
     document.querySelectorAll('.deactivate-btn').forEach(btn => {
         btn.addEventListener('click', function (e) {
             e.preventDefault();
             const href = this.getAttribute('data-url');
             const isSuperAdmin = {{ user.is_superuser|lower }};
-            const action = this.value.toLowerCase(); // Pobierz wartość atrybutu value
+            const action = this.value.toLowerCase();
             
             if (!isSuperAdmin) {
                 swal("Permission Denied", "You don't have permission to perform this action.", "error");
@@ -121,7 +157,7 @@
             const confirmationText = `You are going to completely ${action} this amenity in the building.\nNo reservations will be possible!\nAre you sure you want to ${action} this amenity?`;
             
             swal({
-                title: "Confirmation",
+                title: "Are you sure?",
                 text: confirmationText,
                 icon: "warning",
                 buttons: true,
@@ -147,8 +183,7 @@
             });
         });
     });
-</script>    
-   
+</script>
 {% endblock extra_js %}
 
 
