--- a/templates/management/admin_dashboard.html
+++ b/templates/management/admin_dashboard.html
@@ -15,15 +15,44 @@
         color: red;
     }
 </style>
-<section style="background: linear-gradient(#ffffff 0%, rgb(184,237,233) 52%, #54fff5 100%);height: 650px; margin-top: 200px;">
+<section style="background: linear-gradient(#ffffff 0%, rgb(184,237,233) 52%, #54fff5 100%); margin-top: 200px;">
     <div class="container">
         <div class="row">
-            <div class="col-md-4"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-fill" style="font-size: 116px;height: 138px;width: 119px;margin-left: 68px;margin-top: 0px;">
-                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
-                </svg>
-                <h3 style="font-family: 'Bebas Neue', serif;">Hello, {{ user.first_name }}</h3>
-                <h5><a href="{% url 'profile_edit' %}">Edit your profile</a>.</h5> 
-                <h5><a href="{% url "password_change" %}">Change your password</a>.</h5>
+            <div class="col-md-4">             
+                <h3 style="font-family: 'Bebas Neue', serif;">Current reservations</h3>
+                <div class="row">
+                    <div class="col-md-6 offset-md-3">
+                        <div id="faqlist-incoming" class="accordion accordion-flush">
+                            {% for cur_reservation in current_reservations %}
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="btn accordion-button collapsed" style="height: 60px;" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-current-{{ cur_reservation.id }}" data-bs-parent="#faqlist-current" style="font-family: 'Bebas Neue'">
+                                        {{ cur_reservation.amenity }} | {{ cur_reservation.date|date:"d/m" }}<br>
+                                        {{ cur_reservation.reservation_period.0 }} - {{ cur_reservation.reservation_period.1 }}
+                                    </button>
+                                </h2>
+                                <div id="content-accordion-current-{{ cur_reservation.id }}" class="accordion-collapse collapse">
+                                    <p class="accordion-body">
+                                        Tenant: {{ cur_reservation.user.first_name }} {{ cur_reservation.user.last_name }}<br>
+                                        Date: {{ cur_reservation.date|date:"d/m/Y" }}<br>
+                                        ID: {{ cur_reservation.id }}<br>
+                                        Status:{% if cur_reservation.active %}
+                                            Active<br>
+                                        {% else %}
+                                            Inactive<br>
+                                        {% endif %}
+                                        Hours booked:<br>
+                                        {% for hour in cur_reservation.hours_booked.all %}
+                                            {{ hour }}<br>
+                                        {% endfor %}
+                                        <a href="{% url 'admin_tenant_profile' name=cur_reservation.user.first_name surname=cur_reservation.user.last_name user_id=cur_reservation.user.id %}">Manage reservation</a>
+                                    </p>
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-md-4">             
                 <h3 style="font-family: 'Bebas Neue', serif;">Incoming reservations</h3>
@@ -33,14 +62,14 @@
                             {% for inc_reservation in incoming_reservations %}
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
-                                    <button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-incoming-{{ inc_reservation.id }}" data-bs-parent="#faqlist-incoming" style="font-family: 'Bebas Neue'">
-                                        {{ inc_reservation.amenity }} | 
-                                        {{ inc_reservation.user.first_name }}
-                                        {{ inc_reservation.user.last_name }}
+                                    <button class="btn accordion-button collapsed" style="height: 60px;" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-incoming-{{ inc_reservation.id }}" data-bs-parent="#faqlist-incoming" style="font-family: 'Bebas Neue'">
+                                        {{ inc_reservation.amenity }} | {{ inc_reservation.date|date:"d/m" }}<br>
+                                        {{ inc_reservation.reservation_period.0 }} - {{ inc_reservation.reservation_period.1 }}
                                     </button>
                                 </h2>
                                 <div id="content-accordion-incoming-{{ inc_reservation.id }}" class="accordion-collapse collapse">
                                     <p class="accordion-body">
+                                        Tenant: {{ inc_reservation.user.first_name }} {{ inc_reservation.user.last_name }}<br>
                                         Date: {{ inc_reservation.date|date:"d/m/Y" }}<br>
                                         ID: {{ inc_reservation.id }}<br>
                                         Status:{% if inc_reservation.active %}
@@ -69,8 +98,8 @@
                             {% for reservation in latest_reservations %}
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
-                                    <button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-latest-{{ reservation.id }}" data-bs-parent="#faqlist-latest" style="font-family: 'Bebas Neue'">
-                                        {{ reservation.amenity }} | 
+                                    <button class="btn accordion-button collapsed" style="height: 60px;" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-latest-{{ reservation.id }}" data-bs-parent="#faqlist-latest" style="font-family: 'Bebas Neue'">
+                                        {{ reservation.amenity }}<br>
                                         {{ reservation.user.first_name }}
                                         {{ reservation.user.last_name }}
                                     </button>
@@ -136,6 +165,13 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-fill" style="font-size: 116px;height: 138px;width: 119px;margin-left: 68px;margin-top: 0px;">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
+            </svg>
+            <h3 style="font-family: 'Bebas Neue', serif;">Hello, {{ user.first_name }}</h3>
+            <h5><a href="{% url 'profile_edit' %}">Edit your profile</a>.</h5> 
+            <h5><a href="{% url "password_change" %}">Change your password</a>.</h5>
+        </div>
         </div>
     </div>
 </section>
